--- a/halos/src/Makefile
+++ b/halos/src/Makefile
@@ -11,7 +11,7 @@ snapshot.so: $(OBJECTS)
 	$(CC) *.o -shared -o snapshot.so 
 
 test.o: test.c snapshot.h snapshot_io.c 
-	$(CC) test.c snapshot_io.c -o test.o 
+	$(CC) test.c snapshot_io.c snapshot_utils.c -o test.o 
 
 %.o: %.c 
 	$(CC) $(CFLAGS) $< -o $@ 
