--- a/halos/src/Makefile
+++ b/halos/src/Makefile
@@ -1,7 +1,7 @@
 
 CC = gcc 
 CFLAGS = -c -fPIC 
-OBJECTS = snapshot_io.o 
+OBJECTS = snapshot_io.o snapshot_utils.o shapshot_subs.o 
 
 all: snapshot.so test.o 
 
@@ -10,8 +10,8 @@ all: snapshot.so test.o
 snapshot.so: $(OBJECTS) 
 	$(CC) *.o -shared -o snapshot.so 
 
-test.o: test.c snapshot.h snapshot_io.c 
-	$(CC) test.c snapshot_io.c snapshot_utils.c -o test.o 
+# test.o: test.c snapshot.h snapshot_io.c 
+# 	$(CC) test.c snapshot_io.c snapshot_utils.c -o test.o 
 
 %.o: %.c 
 	$(CC) $(CFLAGS) $< -o $@ 
