--- a/ultra/dataframe/src/Makefile
+++ b/ultra/dataframe/src/Makefile
@@ -1,14 +1,14 @@
 
 CC = gcc 
 CFLAGS = -c -fPIC 
-OBJECTS = snapshot_io.o snapshot_utils.o snapshot_subs.o 
+OBJECTS = dataframe_sieve.o dataframe_utils.o dataframe_sorting.o 
 
-all: snapshot.so 
+all: dataframe.so 
 
 .PHONY: clean 
 
-snapshot.so: $(OBJECTS) 
-	$(CC) *.o -shared -o snapshot.so 
+dataframe.so: $(OBJECTS) 
+	$(CC) *.o -shared -o dataframe.so 
 
 # test.o: test.c snapshot.h snapshot_io.c 
 # 	$(CC) test.c snapshot_io.c snapshot_utils.c -o test.o 
