--- a/packages/ultra/ultra/math/src/Makefile
+++ b/packages/ultra/ultra/math/src/Makefile
@@ -1,6 +1,7 @@
 
 CC = gcc 
 CFLAGS = -c -fPIC 
+PYDIR = /Library/Frameworks/Python.framework/Versions/3.7/Headers 
 OBJECTS = trigonometry.o utils.o 
 
 all: ultramath.so 
@@ -11,7 +12,7 @@ ultramath.so: $(OBJECTS)
 	$(CC) *.o -shared -o ultramath.so 
 
 %.o: %.c *.h 
-	$(CC) $(CFLAGS) $< -o $@ 
+	$(CC) $(CFLAGS) -I$(PYDIR) $< -o $@ 
 
 clean: 
 	rm -f *.o 
